# redcar_ws

./: CartographerSaveMap.sh  README.md  README_en.md  output.txt
src/: point.txt
src/ORB_SLAM2/src/: LocalMapping.cc  LoopClosing.cc  System.cc  Viewer.cc
src/auto_nav2d_point/data/: 1.json  2.json
src/auto_nav2d_point/src/: record_location.py
src/follow_waypoints/launch/: follow_waypoints.launch
src/pure_pursuit/pure_persuit/: CMakeLists.txt  package.xml
src/pure_pursuit/tianracer_navigation/src/: plan.cpp
src/record_point/: CMakeLists.txt  package.xml
src/record_point/src/: load_point_node.cpp  save_point_node.cpp
src/redcar_sim/navi_multi_goals_pub_rviz_plugin/src/: multi_navi_goal_panel.cpp
src/redcar_sim/redcar_gazebo/: CMakeLists.txt  config_move_base_huanyu.7z  package.xml
src/redcar_sim/redcar_gazebo/config_move_base/: dual_ekf_navsat.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  (+3 more)
src/redcar_sim/redcar_model/: CMakeLists.txt  myrviz.rviz  package.xml
src/redcar_sim/redcar_send_goals/: CMakeLists.txt  package.xml
src/redcar_sim/redcar_show_path/: CMakeLists.txt  package.xml
src/redcar_sim/redcar_sim/: CMakeLists.txt  package.xml
src/redcar_sim/redcar_teleop_twist_keyboard/: CMakeLists.txt  package.xml  redcar_teleop_twist_keyboard.py
src/redcar_sim/redcar_waypoint_global_planner/: CMakeLists.txt  package.xml
src/waypoint_meta/: Redme.txt
src/wit_ros_imu/launch/: display_and_imu.launch  rviz_and_imu.launch  wit_imu.launch
src/wit_ros_imu/scripts/: wit_normal_ros.py
(+73 files in other folders)
